Prevent server resource donut clipping on narrow widths

--- a/services/aris-web/app/SessionDashboard.module.css
+++ b/services/aris-web/app/SessionDashboard.module.css
@@ -401,7 +401,7 @@
   }
 
   .sessionChartContainer {
-    height: 120px;
+    height: 128px;
   }
 
   .sessionMainToolbar {
@@ -441,7 +441,7 @@
   }
 
   .sessionChartContainer {
-    height: 92px;
+    height: 108px;
   }
 
   .sessionChartCenterText {
